# jianwei

./: .gitignore  PLAN.md  README.md
apps/desktop/: package-lock.json  package.json
apps/desktop/src/: App.css  App.tsx  api.ts
apps/desktop/src-tauri/: tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/pages/: Backtest.tsx  Data.tsx  Evolve.tsx  Kline.tsx  Picks.tsx  Sim.tsx
engine/: pyproject.toml
engine/jianwei/: __init__.py  cli.py  config.py  scheduler.py  scheduler_log.py
engine/jianwei/api/: app.py
engine/jianwei/backtest/: constraints.py  engine.py
engine/jianwei/data/: eastmoney.py  source_akshare.py  store.py  sync.py
engine/jianwei/evolve/: optimizer.py
engine/jianwei/factors/: price.py
engine/jianwei/report/: metrics.py
engine/jianwei/sim/: broker.py
engine/jianwei/strategy/: registry.py  score.py
engine/tests/: test_api.py  test_constraints.py  test_engine.py  test_metrics.py  test_score.py
