[project]
name = "jianwei"
version = "0.1.0"
description = "见微 Jianwei — A 股自动选股引擎"
requires-python = ">=3.13,<3.14"
dependencies = [
    "akshare>=1.18.64",
    "httpx[http2]>=0.28",
    "pandas>=2.2",
    "duckdb>=1.5.3",
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "pydantic>=2.13.4",
    "optuna>=4.9.0",
    "apscheduler>=3.11.2,<4",
    "curl-cffi>=0.13",
]

[project.scripts]
jianwei = "jianwei.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4",
    "ruff>=0.12",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
